--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-{% include base_path %}
+<!-- {% include base_path %}
 
 <meta charset="utf-8">
 
@@ -12,5 +12,22 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
+<!-- Theme bootstrap: default to dark before first paint, honor saved choice -->
+<meta name="color-scheme" content="dark light">
+<script>
+  (function() {
+    try {
+      var saved = localStorage.getItem('theme'); // 'dark' | 'light' | null
+      var initial = saved || 'dark';             // default to dark on first visit
+      if (initial === 'dark') {
+        document.documentElement.setAttribute('data-theme','dark');
+      } else {
+        document.documentElement.removeAttribute('data-theme');
+      }
+    } catch (e) {}
+  })();
+</script>
+
+
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css"> -->
