--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,16 @@
+<!-- {% include base_path %}
+
+<meta charset="utf-8">
+
+{% include seo.html %}
+
+<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script>
+  document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
+</script>
 
 <!-- Theme bootstrap: default to dark before first paint, honor saved choice -->
 <meta name="color-scheme" content="dark light">
