--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,4 +30,4 @@
 
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css"> --> this is head
+<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
